@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-08-08T01:34:39Z",
+  "timestamp" : "2024-08-09T01:35:44Z",
   "count_outdated" : 8218,
   "uniques_outdated" : 3659,
-  "count" : 8223,
-  "uniques" : 3664,
+  "count" : 8224,
+  "uniques" : 3665,
   "clones" : [
     {
       "timestamp": "2024-07-29T00:00:00Z",
@@ -40,6 +40,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-08-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
