@@ -1,6 +1,6 @@
 {
-  "count": 5,
-  "uniques": 5,
+  "count": 6,
+  "uniques": 6,
   "clones": [
     {
       "timestamp": "2024-07-29T00:00:00Z",
@@ -21,6 +21,11 @@
       "timestamp": "2024-08-07T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2024-08-08T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
